--- a/index.html
+++ b/index.html
@@ -6,9 +6,70 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+      <!-- Insert to your webpage before the </head> -->
+    <script src="sliderengine/jquery.js"></script>
+    <script src="sliderengine/amazingslider.js"></script>
+    <link rel="stylesheet" type="text/css" href="sliderengine/amazingslider-1.css">
+    <script src="sliderengine/initslider-1.js"></script>
+    <!-- End of head section HTML codes -->
+    
 </head>
 
 <body>
+
+
+
+    <!-- slider section -->
+    <div class="amazingslider-wrapper" id="amazingslider-wrapper-1" style="display:block;position:relative;max-width:100%;margin:0 auto;">
+        <div class="amazingslider" id="amazingslider-1" style="display:block;position:relative;margin:0 auto;">
+            <ul class="amazingslider-slides" style="display:none;">
+                <li><img src="images/WIN_20220518_10_55_10_Pro.jpg" alt="SAYLANI SEESION"  title="SAYLANI SEESION" data-description="SAYLANI SEESION" />
+                </li>
+                <li><img src="images/WIN_20220518_10_55_18_Pro.jpg" alt="SAYLANI SEESION"  title="SAYLANI SEESION" data-description="SAYLANI SEESION" />
+                </li>
+                <li><img src="images/WIN_20220518_10_55_20_Pro.jpg" alt="SAYLANI SEESION"  title="SAYLANI SEESION" data-description="SAYLANI SEESION" />
+                </li>
+                <li><img src="images/WIN_20220518_10_55_22_Pro.jpg" alt="SAYLANI SEESION"  title="SAYLANI SEESION" data-description="SAYLANI SEESION" />
+                </li>
+                <li><img src="images/WIN_20220518_10_55_23_Pro.jpg" alt="SAYLANI SEESION"  title="SAYLANI SEESION" data-description="SAYLANI SEESION" />
+                </li>
+                <li><img src="images/WIN_20220518_10_55_24_Pro.jpg" alt="SAYLANI SEESION"  title="SAYLANI SEESION" data-description="SAYLANI SEESION" />
+                </li>
+                <li><img src="images/WIN_20220518_10_55_26_Pro.jpg" alt="SAYLANI SEESION"  title="SAYLANI SEESION" data-description="SAYLANI SEESION" />
+                </li>
+                <li><img src="images/WIN_20220518_10_55_28_Pro.jpg" alt="SAYLANI SEESION"  title="SAYLANI SEESION" data-description="SAYLANI SEESION" />
+                </li>
+                <li><img src="images/WIN_20220518_10_55_32_Pro.jpg" alt="SAYLANI SEESION"  title="SAYLANI SEESION" />
+                </li>
+                <li><img src="images/WIN_20220804_10_35_19_Pro.jpg" alt="SAYLANI SEESION"  title="SAYLANI SEESION" />
+                </li>
+            </ul>
+            <ul class="amazingslider-thumbnails" style="display:none;">
+                <li><img src="images/WIN_20220518_10_55_10_Pro-tn.jpg" alt="SAYLANI SEESION" title="SAYLANI SEESION" /></li>
+                <li><img src="images/WIN_20220518_10_55_18_Pro-tn.jpg" alt="SAYLANI SEESION" title="SAYLANI SEESION" /></li>
+                <li><img src="images/WIN_20220518_10_55_20_Pro-tn.jpg" alt="SAYLANI SEESION" title="SAYLANI SEESION" /></li>
+                <li><img src="images/WIN_20220518_10_55_22_Pro-tn.jpg" alt="SAYLANI SEESION" title="SAYLANI SEESION" /></li>
+                <li><img src="images/WIN_20220518_10_55_23_Pro-tn.jpg" alt="SAYLANI SEESION" title="SAYLANI SEESION" /></li>
+                <li><img src="images/WIN_20220518_10_55_24_Pro-tn.jpg" alt="SAYLANI SEESION" title="SAYLANI SEESION" /></li>
+                <li><img src="images/WIN_20220518_10_55_26_Pro-tn.jpg" alt="SAYLANI SEESION" title="SAYLANI SEESION" /></li>
+                <li><img src="images/WIN_20220518_10_55_28_Pro-tn.jpg" alt="SAYLANI SEESION" title="SAYLANI SEESION" /></li>
+                <li><img src="images/WIN_20220518_10_55_32_Pro-tn.jpg" alt="SAYLANI SEESION" title="SAYLANI SEESION" /></li>
+                <li><img src="images/WIN_20220804_10_35_19_Pro-tn.jpg" alt="SAYLANI SEESION" title="SAYLANI SEESION" /></li>
+            </ul>
+        <div class="amazingslider-engine"><a href="http://amazingslider.com" title="Responsive jQuery Image Slideshow">Responsive jQuery Image Slideshow</a></div>
+        </div>
+    </div>
+
+    <br>
+    <br>
+    <br>
+
+
+
+
+    <!-- slider section -->
+
     <form action="./successfully.html" method="get">
         <fieldset style="width: 500px;background-color: rgb(214, 197, 197);">
             <legend align="center">User Information</legend>
